@@ -3,6 +3,7 @@
 	* buildbot/twcompat.py (waitForDeferred): remove the monkeypatch,
 	tw-2.0.0 and newer have the method we need.
 	(getProcessOutputAndValue): same
+	(which): remove this method, tw-2.0.0 t.p.procutils has it
 
 	* buildbot/twcompat.py (implements): remove this method
 	* buildbot/*: import implements() from zope.interface directly
